test/corpus/v0_heads.txt
================================================================================
v0 partial set rule at end of file
================================================================================

package p

q[x] { x := 1 }

--------------------------------------------------------------------------------

(source_file
  (module
    (package)
    (ref
      (var))
    (policy
      (rule
        (rule_head
          (var)
          (open_bracket)
          (term
            (ref
              (var)))
          (close_bracket))
        (rule_body
          (open_curly)
          (query
            (literal
              (expr
                (expr_infix
                  (expr
                    (term
                      (ref
                        (var))))
                  (infix_operator
                    (assignment_operator
                      (assignment)))
                  (expr
                    (term
                      (scalar
                        (number))))))))
          (close_curly))))))

================================================================================
v0 object rule with string key at end of file
================================================================================

package p

q["a"] = 1 { true }

--------------------------------------------------------------------------------

(source_file
  (module
    (package)
    (ref
      (var))
    (policy
      (rule
        (rule_head
          (var)
          (open_bracket)
          (term
            (scalar
              (string
                (quoted_string))))
          (close_bracket)
          (rule_head_comp
            (assignment_operator
              (unification))
            (term
              (scalar
                (number)))))
        (rule_body
          (open_curly)
          (query
            (literal
              (expr
                (term
                  (scalar
                    (boolean))))))
          (close_curly))))))

================================================================================
v0 object rule at end of file
================================================================================

package p

q[x] = y { true }

--------------------------------------------------------------------------------

(source_file
  (module
    (package)
    (ref
      (var))
    (policy
      (rule
        (rule_head
          (var)
          (open_bracket)
          (term
            (ref
              (var)))
          (close_bracket)
          (rule_head_comp
            (assignment_operator
              (unification))
            (term
              (ref
                (var)))))
        (rule_body
          (open_curly)
          (query
            (literal
              (expr
                (term
                  (scalar
                    (boolean))))))
          (close_curly))))))

================================================================================
v0 function rule at end of file
================================================================================

package p

f(x) = y { true }

--------------------------------------------------------------------------------

(source_file
  (module
    (package)
    (ref
      (var))
    (policy
      (rule
        (rule_head
          (var)
          (open_paren)
          (rule_args
            (term
              (ref
                (var))))
          (close_paren)
          (rule_head_comp
            (assignment_operator
              (unification))
            (term
              (ref
                (var)))))
        (rule_body
          (open_curly)
          (query
            (literal
              (expr
                (term
                  (scalar
                    (boolean))))))
          (close_curly))))))

================================================================================
v0 rule named if after a constant stays separate
================================================================================

package p

a := 1

if := 2

--------------------------------------------------------------------------------

(source_file
  (module
    (package)
    (ref
      (var))
    (policy
      (rule
        (rule_head
          (var))
        (rule_body
          (assignment)
          (term
            (scalar
              (number)))))
      (rule
        (rule_head
          (var))
        (rule_body
          (assignment)
          (term
            (scalar
              (number))))))))

================================================================================
v0 function named if after a constant stays separate
================================================================================

package p

a := 1

if(x) := x

--------------------------------------------------------------------------------

(source_file
  (module
    (package)
    (ref
      (var))
    (policy
      (rule
        (rule_head
          (var))
        (rule_body
          (assignment)
          (term
            (scalar
              (number)))))
      (rule
        (rule_head
          (var)
          (open_paren)
          (rule_args
            (term
              (ref
                (var))))
          (close_paren))
        (rule_body
          (assignment)
          (term
            (ref
              (var))))))))

================================================================================
v0 unification function named if after a constant stays separate
================================================================================

package p

a = 1

if(x) = x { true }

--------------------------------------------------------------------------------

(source_file
  (module
    (package)
    (ref
      (var))
    (policy
      (rule
        (rule_head
          (var))
        (rule_body
          (unification)
          (term
            (scalar
              (number)))))
      (rule
        (rule_head
          (var)
          (open_paren)
          (rule_args
            (term
              (ref
                (var))))
          (close_paren)
          (rule_head_comp
            (assignment_operator
              (unification))
            (term
              (ref
                (var)))))
        (rule_body
          (open_curly)
          (query
            (literal
              (expr
                (term
                  (scalar
                    (boolean))))))
          (close_curly))))))

================================================================================
v0 object rule named if after a constant stays separate
================================================================================

package p

a := 1

if[x] := 2

--------------------------------------------------------------------------------

(source_file
  (module
    (package)
    (ref
      (var))
    (policy
      (rule
        (rule_head
          (var))
        (rule_body
          (assignment)
          (term
            (scalar
              (number)))))
      (rule
        (rule_head
          (var)
          (open_bracket)
          (term
            (ref
              (var)))
          (close_bracket))
        (rule_body
          (assignment)
          (term
            (scalar
              (number))))))))

================================================================================
v0 function named if with expression value stays separate
================================================================================

package p

a := 1

if(x) := x + 1

--------------------------------------------------------------------------------

(source_file
  (module
    (package)
    (ref
      (var))
    (policy
      (rule
        (rule_head
          (var))
        (rule_body
          (assignment)
          (term
            (scalar
              (number)))))
      (rule
        (rule_head
          (var))
        (rule_body
          (literal
            (expr
              (expr_infix
                (expr
                  (expr_infix
                    (expr
                      (expr_parens
                        (open_paren)
                        (expr
                          (term
                            (ref
                              (var))))
                        (close_paren)))
                    (infix_operator
                      (assignment_operator
                        (assignment)))
                    (expr
                      (term
                        (ref
                          (var))))))
                (infix_operator
                  (arith_operator))
                (expr
                  (term
                    (scalar
                      (number))))))))))))

================================================================================
v0 object rule named if with expression value stays separate
================================================================================

package p

a := 1

if[x] := 2 + 3

--------------------------------------------------------------------------------

(source_file
  (module
    (package)
    (ref
      (var))
    (policy
      (rule
        (rule_head
          (var))
        (rule_body
          (assignment)
          (term
            (scalar
              (number)))))
      (rule
        (rule_head
          (var))
        (rule_body
          (literal
            (expr
              (expr_infix
                (expr
                  (expr_infix
                    (expr
                      (term
                        (ref
                          (array
                            (open_bracket)
                            (term
                              (ref
                                (var)))
                            (close_bracket)))))
                    (infix_operator
                      (assignment_operator
                        (assignment)))
                    (expr
                      (term
                        (scalar
                          (number))))))
                (infix_operator
                  (arith_operator))
                (expr
                  (term
                    (scalar
                      (number))))))))))))
